[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/gray_bg.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TestGUI.gd" type="Script" id=2]

[node name="TestGUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Skill_Bar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Skill_Bar"]
margin_right = 935.0
margin_bottom = 81.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected_Skill" type="TextureRect" parent="Skill_Bar/Background"]
self_modulate = Color( 0.968627, 0, 0, 1 )
margin_top = 10.0
margin_right = 60.0
margin_bottom = 70.0
size_flags_vertical = 5
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Skill_Bar/Background/Selected_Skill"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut1" type="TextureRect" parent="Skill_Bar/Background"]
self_modulate = Color( 0.670588, 0.494118, 0.494118, 1 )
margin_left = 100.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 70.0
size_flags_vertical = 5
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Skill_Bar/Background/Shortcut1" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut2" type="TextureRect" parent="Skill_Bar/Background"]
self_modulate = Color( 0.670588, 0.494118, 0.494118, 1 )
margin_left = 200.0
margin_top = 10.0
margin_right = 260.0
margin_bottom = 70.0
size_flags_vertical = 5
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Skill_Bar/Background/Shortcut2" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut3" type="TextureRect" parent="Skill_Bar/Background"]
self_modulate = Color( 0.670588, 0.494118, 0.494118, 1 )
margin_left = 300.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 70.0
size_flags_vertical = 5
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Skill_Bar/Background/Shortcut3" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut4" type="TextureRect" parent="Skill_Bar/Background"]
self_modulate = Color( 0.670588, 0.494118, 0.494118, 1 )
margin_left = 400.0
margin_top = 10.0
margin_right = 460.0
margin_bottom = 70.0
size_flags_vertical = 5
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Skill_Bar/Background/Shortcut4" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut5" type="TextureRect" parent="Skill_Bar/Background"]
self_modulate = Color( 0.670588, 0.494118, 0.494118, 1 )
margin_left = 500.0
margin_top = 10.0
margin_right = 560.0
margin_bottom = 70.0
size_flags_vertical = 5
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Skill_Bar/Background/Shortcut5" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut6" type="TextureRect" parent="Skill_Bar/Background"]
self_modulate = Color( 0.670588, 0.494118, 0.494118, 1 )
margin_left = 600.0
margin_top = 10.0
margin_right = 660.0
margin_bottom = 70.0
size_flags_vertical = 5
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Skill_Bar/Background/Shortcut6" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
